--- a/app/Resources/views/album/index.html.twig
+++ b/app/Resources/views/album/index.html.twig
@@ -7,7 +7,7 @@
             <p>No hay album registrado</p>
         {% else %}
             {% for album in albums %}
-                <li>{{ album.titulo }}</li>
+                <li class="album">{{ album.titulo }}</li>
             {% endfor %}
         {% endif %}
     </ul>
